test/haskell2010/conformance/negative/MissingInstanceType.hs
module MissingInstanceType (MissingBox(..)) where

data MissingBox = MissingBox Int
